--- a/app/src/main/res/layout/activity_splashscree.xml
+++ b/app/src/main/res/layout/activity_splashscree.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".splashscree">
+    tools:context=".splashscree"
+    android:background="@drawable/wall2">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -25,7 +26,7 @@
 
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
-        android:src="@drawable/wall"
+        android:src="@drawable/walli"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,10 +35,12 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="250dp"
+        android:layout_width="0dp"
         android:layout_height="15dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
         android:indeterminate="true"
         android:max="100"
         android:progress="0"
@@ -53,9 +56,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/chela_one"
+        android:fontFamily="@font/aclonica"
         android:gravity="center"
         android:text="TechNTecky"
+        android:textColor="#FF9800"
         android:textSize="50sp"
         android:transitionName="logo_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +76,7 @@
         android:fontFamily="@font/aclonica"
         android:gravity="center"
         android:text="Lets Update This World"
+        android:textColor="#FFC107"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
