--- a/app/src/main/res/layout/activity_splashscree.xml
+++ b/app/src/main/res/layout/activity_splashscree.xml
@@ -13,16 +13,18 @@
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
 
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/technteckyll"
         android:src="@drawable/pic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gifImageView"
-        android:layout_width="match_parent"
-        android:layout_height="219dp"
+        android:layout_width="0dp"
+        android:layout_height="239dp"
 
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
@@ -39,9 +41,10 @@
         android:layout_height="15dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
         android:indeterminate="true"
+        android:theme="@style/progressBarBlue"
         android:max="100"
         android:progress="0"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,12 +59,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
+        android:contentDescription="@string/technteckyll"
         android:fontFamily="@font/aclonica"
         android:gravity="center"
-        android:text="TechNTecky"
-        android:textColor="#FF9800"
+        android:text="@string/techntecky"
+        android:textColor="#FFC107"
         android:textSize="50sp"
-        android:transitionName="logo_text"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,11 +76,11 @@
         android:layout_width="0dp"
         android:layout_height="20dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/aclonica"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/baloo"
         android:gravity="center"
-        android:text="Lets Update This World"
-        android:textColor="#FFC107"
+        android:text="@string/pathofeverytech"
+        android:textColor="#3F51B5"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
