--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/aclonica</item>
         <item>@font/alike_angular</item>
+        <item>@font/almendra_sc</item>
         <item>@font/antic</item>
         <item>@font/baloo</item>
         <item>@font/butcherman</item>
